--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,14 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Maven build output
+/target/
 
-### IntelliJ IDEA ###
+# InteliJ IDEA compilation output
+/out/
+
+# Other potential build files
+/bin/
+
+# InteliJ IDEA configuration
 .idea/
-*.iws
 *.iml
+*.iws
 *.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
